# design-projects

./: .gitignore  Makefile  README.md  pyproject.toml  start_editor.sh
src/helper_objects/: __init__.py  d12_twinset.py  hbm_tool_cart.py
src/helper_objects/d12_tanks/: d12_tanks.py
src/workbench/: BESTELBON_fijnhout.md  joinery_diagram.py  render_colored.py  workbench_v1.py  workbench_v2.py  workbench_v2_drawings.py  workbench_v2_pdf.py
