[project]
name = "design-projects"
version = "0.1.0"
description = "Parametric CAD designs using CadQuery"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "cadquery>=2.7.0",
    "pyvista>=0.47.1",
    "reportlab>=4.4.10",
    "svglib>=1.6.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.7",
]
editor = [
    "cq-editor>=0.6.2",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
